--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "docker:down": "docker-compose down"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@headlessui/react": "^1.7.7",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
@@ -22,6 +23,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/forms": "^0.5.6",
     "@types/mdx": "^2.0.6",
@@ -29,10 +31,12 @@
     "@vercel/analytics": "^0.1.8",
     "ai": "^2.1.21",
     "axios": "^1.4.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "concurrently": "^8.2.0",
     "contentlayer": "^0.3.4",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.10",
     "ioredis": "^5.3.2",
     "lemonsqueezy.ts": "^0.1.7",
@@ -44,6 +48,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.0",
     "openai": "^4.4.0",
     "openai-edge": "^1.2.0",
     "prisma": "^5.4.2",
@@ -65,7 +70,8 @@
     "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^9.0.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
